--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,10 +1,10 @@
 Package: socialmentions
-Title: Social Mentions Data
+Title: Social Mentions
 Version: 0.1.0
 Date: 2016-08-07
 Author: Abhinav Yedla, Dr.Shawn Dorius
 Maintainer: Abhinav Yedla <abhinavyedla@gmail.com>
-Description: Get Strength, Sentiment, Passion and Reach of a term in Blogs, MicroBlogs, Bookmarks, Images or all of the sources.
+Description: Get Strength, Sentiment, Passion and Reach for a term. User can choose from five different sources. Blogs, MicroBlogs, Bookmarks, Images or combination of all the sources.
 Depends:
     R (>= 3.0.1),
 	rvest
